--- a/Sass/_layout.scss
+++ b/Sass/_layout.scss
@@ -16,6 +16,7 @@ header{
     grid-column: 1/3;
     max-width: 597px;
     width: 434px;
+    height: 810px;
     .home{
         display: flex;
         flex-direction: column;
@@ -66,6 +67,12 @@ header{
     }
 }
 
+.container__central{
+    overflow: hidden;
+    width: max-content;
+    overflow-y: auto;
+    height: 815px;
+}
 main{
     display: grid;
     grid-column: 3/11;
@@ -83,6 +90,7 @@ main{
         flex-direction: column;
         gap: 80px;
         width: 965px;
+        height: 340px;
     }
     .content{
         grid-column: 1/9;
@@ -99,6 +107,11 @@ main{
         margin: 10px  5px 0px 3px;
         width: 377px;
         border-radius: $radius $radius;
+        height: 775px;
+        overflow: hidden;
+        overflow-y: auto;
+        position: fixed;
+        right: -7px;
     }
 }
 
@@ -139,3 +152,4 @@ footer{
     }
 
   }
+
