--- a/Sass/main.css
+++ b/Sass/main.css
@@ -31,6 +31,7 @@ header {
   grid-column: 1/3;
   max-width: 597px;
   width: 434px;
+  height: 810px;
 }
 header .home {
   display: flex;
@@ -78,6 +79,14 @@ header .playlist {
   font-size: 1rem;
 }
 
+.container__central {
+  overflow: hidden;
+  width: -moz-max-content;
+  width: max-content;
+  overflow-y: auto;
+  height: 815px;
+}
+
 main {
   display: grid;
   grid-column: 3/11;
@@ -96,6 +105,7 @@ main .portade {
   flex-direction: column;
   gap: 80px;
   width: 965px;
+  height: 340px;
 }
 main .content {
   grid-column: 1/9;
@@ -112,6 +122,11 @@ main .rigthSide {
   margin: 10px 5px 0px 3px;
   width: 377px;
   border-radius: 10px 10px;
+  height: 775px;
+  overflow: hidden;
+  overflow-y: auto;
+  position: fixed;
+  right: -7px;
 }
 
 footer {
@@ -236,6 +251,10 @@ header .nav .options img {
 header .nav .options .options__list img {
   width: 25px;
   margin: 0 0 0 10px;
+}
+header .playlist {
+  overflow-y: auto;
+  height: 530px;
 }
 header .playlist a {
   display: inline-block;
@@ -492,6 +511,7 @@ main .songs .song__1 {
   align-items: center;
   gap: 10px;
   margin: 10px 0 10px 0;
+  position: relative;
 }
 main .songs .song__1 .song__name {
   display: flex;
@@ -576,6 +596,7 @@ main .songs .song__1 .song__option .options .option__added img {
 }
 main .see {
   margin-top: 20px;
+  position: relative;
 }
 main .see .see__more {
   font-weight: bold;
