--- a/Sass/_components.scss
+++ b/Sass/_components.scss
@@ -896,138 +896,200 @@ main{
             }
         }
     }
-}
-
-footer{
-    .about{
-        .about__portade{
-            .about__title{
-                color: $whiteLight;
-                font-size: 20px;
+    .footer{
+        .about{
+            .about__portade{
+                .about__title{
+                    color: $whiteLight;
+                    font-size: 20px;
+                }
+                .about__img{
+                    height: 520px;
+                    background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
+                    background-size: cover; 
+                    background-position: center 4%; 
+                    background-repeat: no-repeat; 
+                    margin: 10px  5px 0 5px;
+                    border-radius: $radius $radius 0 0;
+                    padding: 40px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    align-items: flex-start;
+                    gap: 10px;   
+                    opacity: .8;
+                    border-radius: $radius;
+                    h4,p{
+                        color: $whiteLight;
+                        margin: 0;
+                    }
+                    p{
+                        color: $whiteLight;
+                        text-align: justify;
+                        width: 655px;
+                        max-height: 70px;
+                        line-height: 25px;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3; /* Limita a 3 líneas (ajústalo según tus necesidades) */
+                        line-clamp: 3;
+                        -webkit-box-orient: vertical; /* Orientación vertical */
+                        overflow: hidden; /* Oculta el desbordamiento */
+                    }
+                    &:hover{
+                        color: $whiteLight;
+                        scale: 1.02;
+                        transition: .5s;
+                        opacity: .9;
+                    }
+                }
             }
-            .about__img{
-                height: 520px;
-                background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
-                background-size: cover; 
-                background-position: center 4%; 
-                background-repeat: no-repeat; 
-                margin: 10px  5px 0 5px;
-                border-radius: $radius $radius 0 0;
-                padding: 40px;
+            .articlesPromotion{
                 display: flex;
                 flex-direction: column;
-                justify-content: flex-end;
-                align-items: flex-start;
-                gap: 10px;   
-                opacity: .8;
-                border-radius: $radius;
-                h4,p{
+                gap: 20px;
+                .articlesPromotion__title{
+                    font-size: 1.5em;
+                    margin: 5px 5px 0px 5px;
                     color: $whiteLight;
-                    margin: 0;
                 }
-                p{
+                .articlesPromotion__content{
+                    @include promotion;
+                    }
+                }
+            }
+    //experimentación con Blackbox//
+            .aboutLinks{
+                
+                h2{
                     color: $whiteLight;
-                    text-align: justify;
-                    width: 655px;
-                    max-height: 70px;
-                    line-height: 25px;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 3; /* Limita a 3 líneas (ajústalo según tus necesidades) */
-                    line-clamp: 3;
-                    -webkit-box-orient: vertical; /* Orientación vertical */
-                    overflow: hidden; /* Oculta el desbordamiento */
+                    font-size: 1rem;
                 }
-                &:hover{
-                    color: $whiteLight;
-                    scale: 1.02;
-                    transition: .5s;
-                    opacity: .9;
+                ul{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 15px;
+                    list-style-type: none;
+                    padding: 0;
+                    justify-content: flex-start;
                 }
-            }
-        }
-        .articlesPromotion{
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            .articlesPromotion__title{
-                font-size: 1.5em;
-                margin: 5px 5px 0px 5px;
-                color: $whiteLight;
-            }
-            .articlesPromotion__content{
-                @include promotion;
+
+            a {
+                color: $white;
+                text-decoration: none;
+                text-wrap: wrap;
+                i{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
-            }
-        }
-//experimentación con Blackbox//
-        .aboutLinks{
-            
-            h2{
-                color: $whiteLight;
-                font-size: 1rem;
-            }
-            ul{
-                display: flex;
-                flex-direction: column;
-                gap: 15px;
-                list-style-type: none;
-                padding: 0;
-                justify-content: flex-start;
+                img{
+                    width: 20px;
+                }
             }
 
-        a {
-            color: $white;
-            text-decoration: none;
-            text-wrap: wrap;
-            i{
+            a:hover {
+                text-decoration: underline;
+                color: $whiteLight;
+            }
+
+            .social__media {
+                margin-top: 20px;
                 display: flex;
+                gap: 10px;
+            }
+
+            .social__media a {
+                display: flex;
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                background-color: rgb(51, 51, 51);
+                color: black;
+                text-align: center;
+                line-height: 30px;
+            /* transition: background-color 0.3s;*/
                 justify-content: center;
                 align-items: center;
+                padding: 3px;
             }
-            img{
-                width: 20px;
+
+            .social__media a:hover {
+                background-color: #686868;
             }
+            }
+            .lastLinks{
+                .footer__links{
+                    @include footerLastLinks;
+                }
+                .copyright {
+                    margin-left: 160px;
+                }
+            }
+
         }
 
-        a:hover {
-            text-decoration: underline;
-            color: $whiteLight;
-        }
+}
 
-        .social__media {
-            margin-top: 20px;
+.controls{
+    .actualSong{
+        grid-column: 1/2;
+        background-color: #000000;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: baseline;
+        .actualSong__song{
+            width: 340px;
             display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
             gap: 10px;
-        }
-
-        .social__media a {
-            display: flex;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            background-color: rgb(51, 51, 51);
-            color: black;
-            text-align: center;
-            line-height: 30px;
-           /* transition: background-color 0.3s;*/
-            justify-content: center;
-            align-items: center;
-            padding: 3px;
-        }
-
-        .social__media a:hover {
-            background-color: #686868;
-        }
-        }
-        .lastLinks{
-            .footer__links{
-                @include footerLastLinks;
+            img{
+                width: 55px;
+                height: 55px;
+                border-radius: 5px;
             }
-            .copyright {
-                margin-left: 160px;
+            div{
+                gap: 15px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: center;
+                gap: 5px;
+                h4{
+                    margin: 0;
+                    color: $whiteLight;
+                }
+                p{
+                    margin: 0;
+                }
             }
-        }
-
+            .actualSong__add{
+                display: flex;
+                width: 30px;
+                height: 30px;
+                justify-content: center;
+                align-items: center;
+                background-color: $greenStrong;
+                align-self: center;
+                border-radius: 50%;
+                scale: .8;
+                img{
+                    width: 25px;
+                    
+                }
+            }
+        }        
     }
+    .reproduction{
+        grid-column: 2/3;
+        background-color: #d1770f;
+    }
+    .settings{
+        grid-column: 3/4;
+        background-color: #0011fd;
+    }
+}
+
 
 
