--- a/Sass/main.css
+++ b/Sass/main.css
@@ -24,11 +24,11 @@ html {
 body {
   display: grid;
   margin: 0;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(5, 1fr);
 }
 
 header {
-  grid-column: 1/3;
+  grid-column: 1/2;
   max-width: 597px;
   width: 434px;
   height: 810px;
@@ -79,18 +79,16 @@ header .playlist {
   font-size: 1rem;
 }
 
-.container__central {
+main {
+  z-index: 0.5;
+  display: grid;
+  grid-column: 3/5;
+  grid-template-columns: 2fr 1fr;
   overflow: hidden;
   width: -moz-max-content;
   width: max-content;
   overflow-y: auto;
   height: 815px;
-}
-
-main {
-  display: grid;
-  grid-column: 3/11;
-  grid-template-columns: 2fr 1fr;
 }
 main .portade {
   grid-column: 1/9;
@@ -129,28 +127,28 @@ main .rigthSide {
   right: -7px;
 }
 
-footer {
+.footer {
   grid-column: 3/9;
-  width: 965px;
+  width: 1015px;
 }
-footer .about {
+.footer .about {
   width: 965px;
   grid-column: 2/3;
   background-color: #0f0f0f;
   padding: 20px;
   margin: 0 5px 0 5px;
 }
-footer .about .aboutLinks {
+.footer .about .aboutLinks {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px;
 }
-footer .about hr {
+.footer .about hr {
   width: 95%;
   border: 0.1px solid rgba(192, 192, 192, 0.1);
 }
-footer .about .lastLinks {
+.footer .about .lastLinks {
   padding-top: 30px;
   display: flex;
   flex-direction: row;
@@ -162,8 +160,21 @@ footer .about .lastLinks {
   font-size: 0.8rem;
   height: 100px;
 }
-footer .reproductionBar {
-  background-color: black;
+
+.controls {
+  grid-column: 3/5;
+  background-color: #979797;
+  color: #fff;
+  width: 1870px;
+  height: 105px;
+  font-family: Arial, sans-serif;
+  position: relative;
+  left: -430px;
+  bottom: -5px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 body i, body a {
@@ -1625,12 +1636,11 @@ main .rigthSide .next .next__song .next__link {
 main .rigthSide .next .next__song .next__link img {
   width: 25px;
 }
-
-footer .about .about__portade .about__title {
+main .footer .about .about__portade .about__title {
   color: #fff;
   font-size: 20px;
 }
-footer .about .about__portade .about__img {
+main .footer .about .about__portade .about__img {
   height: 520px;
   background-image: url(https://www.excelsiorcalifornia.com/wp-content/uploads/migration/2011/201101/lfe6b7-lfe6aypanda3.jpg?w=879);
   background-size: cover;
@@ -1647,11 +1657,11 @@ footer .about .about__portade .about__img {
   opacity: 0.8;
   border-radius: 10px;
 }
-footer .about .about__portade .about__img h4, footer .about .about__portade .about__img p {
+main .footer .about .about__portade .about__img h4, main .footer .about .about__portade .about__img p {
   color: #fff;
   margin: 0;
 }
-footer .about .about__portade .about__img p {
+main .footer .about .about__portade .about__img p {
   color: #fff;
   text-align: justify;
   width: 655px;
@@ -1663,49 +1673,49 @@ footer .about .about__portade .about__img p {
   -webkit-box-orient: vertical; /* Orientación vertical */
   overflow: hidden; /* Oculta el desbordamiento */
 }
-footer .about .about__portade .about__img:hover {
+main .footer .about .about__portade .about__img:hover {
   color: #fff;
   scale: 1.02;
   transition: 0.5s;
   opacity: 0.9;
 }
-footer .about .articlesPromotion {
+main .footer .about .articlesPromotion {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-footer .about .articlesPromotion .articlesPromotion__title {
+main .footer .about .articlesPromotion .articlesPromotion__title {
   font-size: 1.5em;
   margin: 5px 5px 0px 5px;
   color: #fff;
 }
-footer .about .articlesPromotion .articlesPromotion__content {
+main .footer .about .articlesPromotion .articlesPromotion__content {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   height: 240px;
   gap: 20px;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion {
   gap: 15px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion img {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion img {
   width: 55px;
   border-radius: 10px;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion h4, footer .about .articlesPromotion .articlesPromotion__content .promotion p {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion h4, main .footer .about .articlesPromotion .articlesPromotion__content .promotion p {
   padding-top: 5px;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion p {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion p {
   margin: 5px 0 0 0;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion img {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion img {
   border-radius: 2px;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion h4 {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion h4 {
   margin: 0;
   color: #fff;
   width: 450px;
@@ -1713,24 +1723,24 @@ footer .about .articlesPromotion .articlesPromotion__content .promotion h4 {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion p {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion p {
   font-size: 0.9rem;
   width: 450px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-footer .about .articlesPromotion .articlesPromotion__content .promotion .promotion__link {
+main .footer .about .articlesPromotion .articlesPromotion__content .promotion .promotion__link {
   width: 20px;
   position: relative;
   bottom: 13px;
   right: 10px;
 }
-footer .aboutLinks h2 {
+main .footer .aboutLinks h2 {
   color: #fff;
   font-size: 1rem;
 }
-footer .aboutLinks ul {
+main .footer .aboutLinks ul {
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -1738,29 +1748,29 @@ footer .aboutLinks ul {
   padding: 0;
   justify-content: flex-start;
 }
-footer .aboutLinks a {
+main .footer .aboutLinks a {
   color: #c0c0c0;
   text-decoration: none;
   text-wrap: wrap;
 }
-footer .aboutLinks a i {
+main .footer .aboutLinks a i {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-footer .aboutLinks a img {
+main .footer .aboutLinks a img {
   width: 20px;
 }
-footer .aboutLinks a:hover {
+main .footer .aboutLinks a:hover {
   text-decoration: underline;
   color: #fff;
 }
-footer .aboutLinks .social__media {
+main .footer .aboutLinks .social__media {
   margin-top: 20px;
   display: flex;
   gap: 10px;
 }
-footer .aboutLinks .social__media a {
+main .footer .aboutLinks .social__media a {
   display: flex;
   width: 30px;
   height: 30px;
@@ -1774,28 +1784,86 @@ footer .aboutLinks .social__media a {
   align-items: center;
   padding: 3px;
 }
-footer .aboutLinks .social__media a:hover {
+main .footer .aboutLinks .social__media a:hover {
   background-color: #686868;
 }
-footer .lastLinks .footer__links {
+main .footer .lastLinks .footer__links {
   display: flex;
   justify-content: center;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-footer .lastLinks .footer__links li {
+main .footer .lastLinks .footer__links li {
   margin: 0 10px;
 }
-footer .lastLinks .footer__links a {
+main .footer .lastLinks .footer__links a {
   color: #b3b3b3;
   text-decoration: none;
 }
-footer .lastLinks .footer__links a:hover {
+main .footer .lastLinks .footer__links a:hover {
   text-decoration: underline;
   text-decoration: none;
   color: #fff;
 }
-footer .lastLinks .copyright {
+main .footer .lastLinks .copyright {
   margin-left: 160px;
+}
+
+.controls .actualSong {
+  grid-column: 1/2;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+}
+.controls .actualSong .actualSong__song {
+  width: 340px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 10px;
+}
+.controls .actualSong .actualSong__song img {
+  width: 55px;
+  height: 55px;
+  border-radius: 5px;
+}
+.controls .actualSong .actualSong__song div {
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 5px;
+}
+.controls .actualSong .actualSong__song div h4 {
+  margin: 0;
+  color: #fff;
+}
+.controls .actualSong .actualSong__song div p {
+  margin: 0;
+}
+.controls .actualSong .actualSong__song .actualSong__add {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  background-color: #00ff6a;
+  align-self: center;
+  border-radius: 50%;
+  scale: 0.8;
+}
+.controls .actualSong .actualSong__song .actualSong__add img {
+  width: 25px;
+}
+.controls .reproduction {
+  grid-column: 2/3;
+  background-color: #d1770f;
+}
+.controls .settings {
+  grid-column: 3/4;
+  background-color: #0011fd;
 }/*# sourceMappingURL=main.css.map */
