--- a/Sass/_layout.scss
+++ b/Sass/_layout.scss
@@ -100,18 +100,18 @@ main{
         width: 965px;
     }
     .rigthSide{
-       grid-column: 9/11;
-        grid-row: 1/3;
-        background-color: $gray;
+        z-index: 0;
+        box-sizing: border-box;
+        grid-column: 9 / 11;
+        grid-row: 1 / 3;
+        background-color: #0f0f0f;
         padding: 15px;
-        margin: 10px  5px 0px 3px;
-        width: 377px;
-        border-radius: $radius $radius;
-        height: 775px;
-        overflow: hidden;
-        overflow-y: auto;
+        margin: 10px 5px 0px 3px;
+        width: 405px;
+        border-radius: 10px 10px;
+        height: 805px;
         position: fixed;
-        right: -7px;
+        right: 0px;
     }
 }
 
@@ -151,7 +151,7 @@ main{
  
   .controls{
     grid-column: 3/5;
-    background-color: #979797;
+    background-color: $black;
     color: #fff;
     width: 1870px;
     height: 105px;
@@ -163,5 +163,30 @@ main{
     grid-template-columns: 1fr 2fr 1fr;
     padding: 10px;
     box-sizing: border-box;
+    .actualSong{
+        grid-column: 1/2;
+        background-color: $black;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: baseline;
+               
+    }
+    .reproduction{
+        grid-column: 2/3;
+        background-color: $black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .settings{
+        grid-column: 3/4;
+        background-color: $black;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
   }
 
