Se añaden estilos de hover y los iconos de play a la sección izquierda

--- a/Sass/_base.scss
+++ b/Sass/_base.scss
@@ -27,6 +27,46 @@ $fontBold: bold;
     background-color: #393939;
 }
 
+@mixin playlistHover{
+    section > i:first-of-type{
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 24px;
+        height: 24px;
+        flex-wrap: wrap;
+        margin-left: -47px;
+        margin-right: 23px;
+        opacity: .9 !important;
+        img{
+            width: 24px;
+            height: 24px;
+            
+        }
+    }
+    div:first-of-type{
+        margin-left: 0px;
+        div{
+            margin-left: 0px;
+        }
+    }
+    section:hover{
+        i:first-of-type{
+            display: flex;
+        }
+        &:hover{
+            background-color:#272626;
+            opacity: 1;
+            i:hover{
+                opacity: 1 !important;
+                scale: 1.01;
+                transition: none !important;
+            }
+        }
+    }
+}
+
 @mixin scrollBar{
     /*Estilos para la escroll bar*/
     -webkit-scrollbar{
